--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "iosfwd": "cpp",
-        "sstream": "cpp"
+        "sstream": "cpp",
+        "free-map.h": "c"
     }
 }
