--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "iosfwd": "cpp",
         "sstream": "cpp",
-        "free-map.h": "c"
+        "free-map.h": "c",
+        "process.h": "c",
+        "string.h": "c"
     }
 }
