--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,6 @@
         "array": "c",
         "string": "c",
         "string_view": "c"
-    }
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
