all done / lock failed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,9 @@
         "filesys.h": "c",
         "array": "c",
         "string": "c",
-        "string_view": "c"
+        "string_view": "c",
+        "malloc.h": "c",
+        "off_t.h": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
